--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <div>
-      <h2>LionSoul ChatBot</h2>
+      <a href="/"><h2>LionSoul ChatBot</h2></a>
       <p class="typing">bot is typing. . .</p>
     </div>
     <div id="toogle-chat">
